inclusão do texto Habilidades

--- a/Site_monike/index.html
+++ b/Site_monike/index.html
@@ -25,6 +25,7 @@
 
     <a href="#">Quem sou eu</a>
     <a href="#">Cursos</a>
+    <a href="#">Habilidades</a>
     <a href="logo_motion.html">Trabalhos</a>
     <a href="#">Redes sociais</a>
 
@@ -42,6 +43,10 @@
         <img src="imagens/perfil.png" class="perfil_centralizada" alt="imagem do perfil">
 
         <p>Olá, sou a Monike, sou designer gráfica, tenho formação técnica em design gráfico e formação academica em designer editoral. </p>
+
+    <h2>Habilidades</h2>
+
+<p>Versionamento Local e repositório remoto utilizando o Git e Github. Este site está sendo criado a partir do curso Curso em vídeo.</p>
 
         <p>Trabalho atualmente na <a class="apis" href="https://apisdesign.com.br/"  target="_blank"  rel="external" ><strong>Apis design</strong></a>, um estúdio de design focado em projetos editoriais educacionais para redes públicas e privadas de ensino.</p>
 
