--- a/Site_monike/index.html
+++ b/Site_monike/index.html
@@ -52,10 +52,10 @@
             <h2>Cursos</h2>
         </aside>
 
-        
+
         <h2>Habilidades</h2>
 
-<p>Versionamento Local e repositório remoto utilizando o Git e Github. Este site está sendo criado a partir do curso Curso em vídeo.</p>
+<p>Gerar versionamento local e repositório remoto utilizando o Git e Github. Este site está sendo criado a partir do Curso em vídeo.</p>
 
  
 
